# Project-C-MYGYM

./: README.md
project2/: Makefile  config.status  fiche.txt  patient.txt  project2.glade
project2/autom4te.cache/: requests
project2/pixmaps/: logo
project2/src/: Makefile  Makefile.am  Makefile.in  Users.txt  adherents.txt  ajouter.c  callbacks.c  callbacks.h  dispo.txt  fiche.txt  interface.c  interface.c.bak  interface.h.bak  main.c  patient.c  patient.h  project2  verifier.c  verifier.h
project3/: Makefile  config.status  project3.glade
project3/autom4te.cache/: requests
project3/src/: Makefile  Makefile.am  Makefile.in  Nadherent.txt  Ndieteticien.txt  Nmedecin.txt  acceuil.txt  callbacks.c  callbacks.h  deal.txt  event.txt  fonctionm.c  fonctionm.h  interface.c  interface.h  main.c  medecin.txt  planning.txt  project3  treeacceuil.c  treeacceuil.h  treeadh.c  treeadh.h  treecoach.c  treecoach.h  treedeal.c  treedeal.h  treediete.c  treediete.h  treeevent.c  treeevent.h  treekine.c  treekine.h  treemed.c  treemed.h  treeplanning.c  treeplanning.h  treeusers.c  treeusers.h  user.txt
project3/src/.deps/: callbacks.Po  fonctionm.Po  treeacceuil.Po  treeadh.Po  treecoach.Po  treedeal.Po  treediete.Po  treeevent.Po  treekine.Po  treemed.Po  treeplanning.Po  treeusers.Po
